# MultiHem

./: .gitignore  LICENSE  LMP1210_Results_Analysis.ipynb  README.md  config.yml  environment.yml  main.py  pyproject.toml  registration.ipynb  setup.py
Baseline Models/: ResNet3D_BaseClass.ipynb
dataset_download/: 1. dcm to nii.py  2. extract form JSON.py  3. IPH_IVH_only_patient.py  A. extract dicom metadata.py  B. dicom metadata by scanID.py  HemSeg222-Metadata.py  HemSeg222-slice-list.csv  IPH_IVH_patientID_filter.py  check slice ID duplicates.py  final_merged.csv  patient_analysis.csv  selected_participants_with_IPH_IVH.csv
src/: BaseTrainer.py  __init__.py  backbone.py  loss.py  model.py  trainer.py  trainer_full.py  utils.py
